# openvpn_wrapper

./: README.md  pyproject.toml
src/: ovpn_connect.py  ovpn_connect.sh
