[tool.poetry]
name = "vpn"
version = "0.1.0"
description = ""
authors = ["Naphtali Gilead <naphtul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.36.18"
types-boto3 = {extras = ["ec2"], version = "^1.36.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
